# i2c-rs

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: lib.rs
