[package]
name = "rust-i2c"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[features]
nos3 = ["nosengine-rust", "toml"]

[dependencies]
i2c-linux = "0.1"
nosengine-rust = { git = "https://github.com/Cube-OS/nosengine-rust.git", optional = true }
toml = { version = "0.4.0", optional = true }
